# evidence-pack-generator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  controls.py
evidence-pack-generator/: .gitignore  README.md
evidence-pack-generator/app/: generator.py  main.py  manifest.py  models.py
evidence-pack-generator/app/templates/: report.html.j2
evidence-pack-generator/examples/basic/evidence/: nessus-summary.txt
evidence-pack-generator/tests/: test_generator_smoke.py
examples/basic/: findings.csv  metadata.json
