[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-pack-generator"
version = "0.2.0"
description = "Generate audit-ready security evidence packs from structured findings, files, and screenshots."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Internal Security Engineering" }
]
dependencies = [
  "typer>=0.12,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.8,<3.0",
  "rich>=13.7,<14.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0"
]

[project.scripts]
evidence-pack-generator = "app.cli:run"

[tool.setuptools.packages.find]
include = ["app*"]
